Fix: NPE khi validate config recipeMode (List.of khong cho contains(null))