@@ -1,6 +1,6 @@
 package com.phat.rbmk.config;
 
-import java.util.List;
+import java.util.Arrays;
 import net.neoforged.neoforge.common.ModConfigSpec;
 
 /** COMMON config: được load trước datapack, nên dùng được trong recipe condition. */
@@ -10,7 +10,7 @@ public final class RbmkCommonConfig {
     public static final ModConfigSpec.ConfigValue<String> RECIPE_MODE = B
             .comment("Chế độ recipe: auto = tự phát hiện (đủ 6 mod ATM -> atm, thiếu -> standalone), atm, standalone",
                      "Recipe mode: auto | atm | standalone")
-            .defineInList("recipeMode", "auto", List.of("auto", "atm", "standalone"));
+            .defineInList("recipeMode", "auto", Arrays.asList("auto", "atm", "standalone"));
 
     public static final ModConfigSpec SPEC = B.build();
 
